# Curves3D

./: CMakeLists.txt  README.md
app/: main.cpp
include/: curves3d.h
src/: curve3d.cpp
